# CS1660_Group_Project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: authserver-cicd.yml  ci.yml
AuthServer/: .gitignore  Dockerfile  apiDoc.md  cloudbuild.yaml  pom.xml
AuthServer/src/main/java/com/example/Authserver/: AuthServerApplication.java
AuthServer/src/main/java/com/example/Authserver/config/: CorsConfig.java  FirestoreConfig.java  SecurityConfig.java
AuthServer/src/main/java/com/example/Authserver/controller/: AuthController.java
AuthServer/src/main/java/com/example/Authserver/entity/: User.java
AuthServer/src/main/java/com/example/Authserver/repository/: UserRepository.java
AuthServer/src/main/java/com/example/Authserver/security/: OAuth2SuccessHandler.java
AuthServer/src/main/java/com/example/Authserver/service/: UserService.java
AuthServer/src/main/resources/: application.properties
cc_cloud_run/: main.py
docs/: client-side-js.md  cloud-run.md  firestore.md  oauth2.md  python-backend.md
firestore/: Dockerfile
static/: auth-integration.js  config.js  firebase.js
template/: attendance_list.html  confirm.html  index.html  professor.html
