[project]
name = "cc-cloud-run"
version = "0.1.0"
description = "University of Pittsburgh Intro to Cloud Computing Cloud Run Assignment"
authors = [
    {name = "dpm79@pitt.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "google (>=3.0.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "google-cloud-firestore (>=2.20.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
pytest-asyncio = "^0.25.3"
mypy = "^1.15.0"

